--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,344 @@
-distributed==1.25.3
-pexpect==4.8.0
-pandas==1.3.5
-cftime==1.5.2
-click==7.1.2
-markupsafe==2.0.1
-pycaret==2.3.6
-decorator==4.4.2
-requests==2.27.1
-pyasn1==0.4.8
-debugpy==1.0.0
-chardet==3.0.4
-cachetools==4.2.4
-jinja2==2.11.3
-graphviz==0.10.1
-kiwisolver==1.3.2
-cloudpickle==1.3.0
-google==2.0.3
-cffi==1.15.0
-notebook==5.3.1
-matplotlib==3.2.2
-psutil==5.4.8
-entrypoints==0.4
-bottleneck==1.3.2
-scipy==1.5.4
-xarray==0.18.2
-plotly==5.5.0
-wcwidth==0.2.5
-joblib==1.0.1
-six==1.15.0
-portpicker==1.3.9
-llvmlite==0.34.0
-packaging==21.3
-simplegeneric==0.8.1
-ipykernel==4.10.1
-numpy==1.19.5
-yellowbrick==1.3.post1
-traitlets==5.1.1
-tqdm==4.62.3
-sortedcontainers==2.4.0
-msgpack==1.0.3
-numexpr==2.8.1
-pickleshare==0.7.5
-lightgbm==3.3.2
-imblearn==0.0
-idna==2.10
-pytz==2018.9
-cycler==0.11.0
-pygments==2.6.1
-zipp==3.7.0
-tornado==5.1.1
-pipreqsnb==0.2.4
-threadpoolctl==3.1.0
-pyarrow==6.0.1
-dask==2.12.0
-urllib3==1.24.3
-mlflow==1.23.1
-ptyprocess==0.7.0
-pyod==0.9.7
-toolz==0.11.2
-ipywidgets==7.6.5
-rsa==4.8
-tblib==1.7.0
-certifi==2021.10.8
+absl-py==0.11.0
+alabaster==0.7.12
+alembic==1.7.6
+altair==4.1.0
 astor==0.8.1
+attrs==21.4.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
+backports.shutil-get-terminal-size==1.0.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+base58==2.1.0
+bleach==4.1.0
+blinker==1.4
+blis==0.7.5
+bokeh==1.4.0
+Boruta==0.3
+boto==2.49.0
+Bottleneck==1.3.2
+cachetools==4.1.1
+catalogue==1.0.0
+certifi==2021.10.8
+cffi==1.14.0
+chardet==3.0.4
+charset-normalizer==2.0.11
+click==8.0.3
+cloudpickle==2.0.0
+clyent==1.2.2
+colorama==0.4.4
+colorlover==0.3.0
+comtypes==1.1.7
+conda==4.11.0
+conda-build==3.18.11
+conda-package-handling==1.7.3
+conda-verify==3.4.2
+contextlib2==0.6.0.post1
+convertdate==2.3.2
+cryptography==2.8
+cufflinks==0.17.3
+cycler==0.11.0
+cymem==2.0.6
+Cython==0.29.14
+cytoolz==0.10.1
+dask==2.11.0
+databricks-cli==0.16.4
+debugpy==1.5.1
+decorator==5.1.1
+deepspeech==0.9.3
+defusedxml==0.7.1
+diff-match-patch==20181111
+distlib==0.3.4
+distributed==2.11.0
+docker==5.0.3
+docopt==0.6.2
+docutils==0.16
+entrypoints==0.4
+ephem==4.1.2
+et-xmlfile==1.0.1
+fastcache==1.1.0
+fbprophet==0.6
+filelock==3.4.2
+flake8==3.7.9
+Flask==2.0.2
+fonttools==4.29.1
+fsspec==0.6.2
+funcy==1.17
+future==0.18.2
+gast==0.3.3
+gensim==3.8.3
+gevent==1.4.0
+gitdb==4.0.9
+GitPython==3.1.26
+glob2==0.7
+google-auth==1.23.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+greenlet==1.1.2
+grpcio==1.33.2
+h5py==2.10.0
+halo==0.0.31
+HeapDict==1.0.1
+hijri-converter==2.2.2
+holidays==0.11.3.1
+html5lib==1.0.1
+htmlmin==0.1.12
+hypothesis==5.5.4
+idna==3.3
+ImageHash==4.2.1
+imageio==2.6.1
+imagesize==1.2.0
+imbalanced-learn==0.7.0
+importlib-metadata==4.10.1
+importlib-resources==5.4.0
+inflection==0.5.1
+intervaltree==3.0.2
+ipykernel==6.8.0
+ipython==7.31.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+itsdangerous==2.0.1
+jdcal==1.4.1
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+json5==0.9.1
+jsonschema==4.4.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.1.0
+jupyter-core==4.9.1
+jupyterlab==1.2.6
+jupyterlab-pygments==0.1.2
+jupyterlab-server==1.0.6
+jupyterlab-widgets==1.0.2
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
+keyring==21.1.0
+kiwisolver==1.3.2
+kmodes==0.11.1
+korean-lunar-calendar==0.2.1
+lazy-object-proxy==1.4.3
+libarchive-c==2.8
+lightgbm==3.3.2
+llvmlite==0.38.0
+locket==0.2.0
+log-symbols==0.0.14
+LunarCalendar==0.0.9
+lxml==4.6.2
+Mako==1.1.6
+Markdown==3.3.3
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+menuinst==1.4.16
+missingno==0.5.0
+mistune==0.8.4
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
+mlflow==1.23.1
+mlxtend==0.19.0
+mock==4.0.1
+more-itertools==8.2.0
+mpmath==1.1.0
+msgpack==0.6.1
+multimethod==1.7
+multipledispatch==0.6.0
+multitasking==0.0.9
+murmurhash==1.0.6
+navigator-updater==0.2.1
+nbclient==0.5.10
+nbconvert==6.4.1
+nbformat==5.1.3
+nest-asyncio==1.5.4
+networkx==2.4
+nltk==3.4.5
+nose==1.3.7
+notebook==6.0.3
+numba==0.55.1
+numexpr==2.8.1
+numpy==1.21.5
+numpydoc==0.9.2
+oauthlib==3.1.0
+olefile==0.46
+openpyxl==3.0.3
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.3.5
+pandas-datareader==0.9.0
+pandas-profiling==3.1.0
+pandocfilters==1.5.0
+paramiko==2.7.1
+parso==0.8.3
+partd==1.1.0
+path==13.1.0
+pathlib2==2.3.5
+pathtools==0.1.2
+patsy==0.5.1
+pep8==1.7.1
+pexpect==4.8.0
+phik==0.12.0
+pickleshare==0.7.5
+Pillow==9.0.1
+pipreqs==0.4.11
+pkginfo==1.5.0.1
+plac==1.1.3
+platformdirs==2.4.1
+plotly==5.5.0
+pluggy==0.13.1
+ply==3.11
+pmdarima==1.7.1
+preshed==3.0.6
+prometheus-client==0.13.1
+prometheus-flask-exporter==0.18.7
+prompt-toolkit==3.0.26
+protobuf==3.19.4
+psutil==5.6.7
+py==1.8.1
+pyarrow==3.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.11
+pycaret==2.3.6
+pycodestyle==2.5.0
+pycosat==0.6.3
+pycparser==2.21
+pycrypto==2.6.1
+pycurl==7.43.0.5
+pydantic==1.9.0
+pydeck==0.5.0
+pydocstyle==4.0.1
+pyflakes==2.1.1
+Pygments==2.11.2
+pyLDAvis==3.3.1
+pylint==2.4.4
+PyMeeus==0.5.11
+PyNaCl==1.3.0
+pynndescent==0.5.6
+pyod==0.9.7
+pyodbc===4.0.0-unsupported
+pyOpenSSL==19.1.0
 pyparsing==3.0.7
+pyreadline==2.1
+pyrsistent==0.18.1
+PySocks==1.7.1
+pystan==2.17.1.0
+pytest==5.3.5
+pytest-arraydiff==0.3
+pytest-astropy==0.8.0
+pytest-astropy-header==0.1.2
+pytest-doctestplus==0.5.0
+pytest-openfiles==0.4.0
+pytest-remotedata==0.3.2
+python-dateutil==2.8.2
+python-jsonrpc-server==0.3.4
+python-language-server==0.31.7
+pytz==2021.3
+PyYAML==5.4.1
+pyzmq==22.3.0
+QDarkStyle==2.8
+QtAwesome==0.6.1
+qtconsole==4.6.0
+QtPy==1.9.0
+Quandl==3.5.3
+querystring-parser==1.2.4
+requests==2.27.1
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rope==0.16.0
+rsa==4.6
+Rtree==0.9.3
+ruamel-yaml==0.15.87
+scikit-image==0.16.2
+scikit-learn==0.23.2
+scikit-plot==0.3.7
+scipy==1.5.4
+seaborn==0.11.2
+Send2Trash==1.8.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.16.0
 sklearn==0.0
+smart-open==5.2.1
+smmap==5.0.0
+snowballstemmer==2.0.0
+sortedcollections==1.1.2
+sortedcontainers==2.1.0
+soupsieve==1.9.5
+spacy==2.3.7
+Sphinx==2.4.0
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sphinxcontrib-websupport==1.2.0
+spinners==0.0.24
+spyder==4.0.1
+spyder-kernels==1.8.1
+SQLAlchemy==1.4.31
+sqlparse==0.4.2
+srsly==1.0.5
+statsmodels==0.11.0
+streamlit==0.75.0
+sympy==1.5.1
+tables==3.6.1
+tabulate==0.8.9
+tangled-up-in-unicode==0.1.0
+tblib==1.6.0
+tenacity==8.0.1
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
+terminado==0.13.1
+testpath==0.5.0
+textblob==0.17.1
+thinc==7.4.5
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.10.0
+torch==1.4.0
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.1
+typing-extensions==4.0.1
+tzlocal==2.1
+ujson==1.35
+umap-learn==0.5.2
+unicodecsv==0.14.1
+urllib3==1.26.8
+validators==0.18.2
+virtualenv==20.13.0
+visions==0.7.4
+waitress==2.0.0
+wasabi==0.9.0
+watchdog==0.10.2
+wcwidth==0.2.5
+webencodings==0.5.1
+webrtcvad==2.0.10
+websocket-client==1.2.3
+Werkzeug==2.0.2
+widgetsnbextension==3.5.1
+win-inet-pton==1.1.0
+win-unicode-console==0.5
+wincertstore==0.2
+wordcloud==1.8.1
+wrapt==1.11.2
 xgboost==0.90
-numba==0.51.2
+xlrd==1.2.0
+XlsxWriter==1.2.7
+xlwings==0.17.1
+xlwt==1.3.0
+xmltodict==0.12.0
+yapf==0.28.0
+yarg==0.1.9
+yellowbrick==1.3.post1
+yfinance==0.1.55
+zict==1.0.0
+zipp==3.7.0
